...
                                <action selector="addButtonPressed:" destination="BYZ-38-t0r" id="y1P-dy-3KZ"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
                        <outlet property="addBarButtonItem" destination="kEG-Xv-w96" id="Ykq-Kd-slL"/>
                        <outlet property="contactsTableView" destination="S3V-Ip-6jQ" id="V1W-bb-4kc"/>
                        <outlet property="groupsBarButtonItem" destination="6qK-lP-Q9E" id="d2m-kg-Epa"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1047.8260869565217" y="107.8125"/>
...
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
                        <outlet property="contactImageView" destination="91B-Po-p4L" id="2FV-gN-iQV"/>
                        <outlet property="contactView" destination="fuu-LD-9WU" id="6iq-zx-cWv"/>
                        <outlet property="emailLabel" destination="IAE-zN-TqD" id="hP1-r2-V7S"/>
                        <outlet property="emailTextField" destination="rgU-Xr-z86" id="J0p-dy-cS2"/>
                        <outlet property="firstNameLabel" destination="rkk-ln-b0Z" id="tIT-Ty-aIu"/>
                        <outlet property="firstNameTextField" destination="I1b-FU-QgT" id="1HL-9W-Q5C"/>
                        <outlet property="lastNameLabel" destination="ROk-Bw-BMW" id="1Io-o3-uiT"/>
                        <outlet property="lastNameTextField" destination="p8d-NC-m1M" id="aBz-jA-pRb"/>
                        <outlet property="mobileLabel" destination="AGV-jv-cEn" id="cR4-dK-k5I"/>
                        <outlet property="mobileTextField" destination="Sl9-qX-eoV" id="A50-Oh-eMT"/>
                        <outlet property="scrollView" destination="0da-P3-PeC" id="isv-fg-ODM"/>
                        <outlet property="uploadImageButton" destination="Yjn-bz-avC" id="vwU-Dc-I6i"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="oaj-1X-eaC" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
